--- a/JQUERY/slick.html
+++ b/JQUERY/slick.html
@@ -92,7 +92,9 @@
         $(function(){
             $('.slider').slick({
                 autoplay: true,
-                autoplaySpeed: 1000,
+                fade: true,
+                speed: 3000,
+                autoplaySpeed: 5000,
                 arrows: true,
                 dots: true,
                 centerMode: true,
