--- a/BOOTSTRAP/layout.html
+++ b/BOOTSTRAP/layout.html
@@ -93,9 +93,12 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <section>
+    <section style="padding-block:120px;" class="bg-warning-subtle">
         <div class="container">
-            <div class="row">
+            <div class="row g-4">
+                <div class="col-12">
+                    <h2 class="display-4 text-center py-4">ABOUT</h2>
+                </div>
                 <div class="col-xl-4 col-6 text-center">
                     <div class="mb-3">
                         <i class="bi bi-box-seam display-1 text-warning"></i>
@@ -149,6 +152,52 @@
                     <p class="text-secondary">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae, expedita.
                     </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section style="padding-block:120px" class="bg-light bg-gradient">
+        <div class="container">
+            <div class="row align-items-center g-4">
+                <div class="col-md-7">
+                    <img src="https://picsum.photos/id/43/800/600" alt="" class="w-100 d-block rounded-4">
+                </div>
+                <div class="col-md-5">
+                    <h3>title</h3>
+                    <p class="text-secondary">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi dolores ducimus sunt aliquam asperiores ipsa. Facere amet recusandae ipsa?
+                    </p>
+                    <a href="#">Link</a>
+                </div>
+                <div class="col-md-7 order-md-2">
+                    <img src="https://picsum.photos/id/47/800/600" alt="" class="w-100 d-block rounded-4">
+                </div>
+                <div class="col-md-5 order-md-1">
+                    <h3>title</h3>
+                    <p class="text-secondary">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi dolores ducimus sunt aliquam asperiores ipsa. Facere amet recusandae ipsa?
+                    </p>
+                    <a href="#">Link</a>
+                </div>
+                <div class="col-md-7 order-md-3">
+                    <img src="https://picsum.photos/id/49/800/600" alt="" class="w-100 d-block rounded-4">
+                </div>
+                <div class="col-md-5 order-md-4">
+                    <h3>title</h3>
+                    <p class="text-secondary">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi dolores ducimus sunt aliquam asperiores ipsa. Facere amet recusandae ipsa?
+                    </p>
+                    <a href="#">Link</a>
+                </div>
+                <div class="col-md-7 order-md-last">
+                    <img src="https://picsum.photos/id/66/800/600" alt="" class="w-100 d-block rounded-4">
+                </div>
+                <div class="col-md-5 order-md-5">
+                    <h3>title</h3>
+                    <p class="text-secondary">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi dolores ducimus sunt aliquam asperiores ipsa. Facere amet recusandae ipsa?
+                    </p>
+                    <a href="#">Link</a>
                 </div>
             </div>
         </div>
