--- a/BOOTSTRAP/layout.html
+++ b/BOOTSTRAP/layout.html
@@ -159,6 +159,9 @@
     <section style="padding-block:120px" class="bg-light bg-gradient">
         <div class="container">
             <div class="row align-items-center g-4">
+                <div class="col-12">
+                    <h2 class="display-4 text-center py-4">SERVICE</h2>
+                </div>
                 <div class="col-md-7">
                     <img src="https://picsum.photos/id/43/800/600" alt="" class="w-100 d-block rounded-4">
                 </div>
@@ -167,7 +170,7 @@
                     <p class="text-secondary">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi dolores ducimus sunt aliquam asperiores ipsa. Facere amet recusandae ipsa?
                     </p>
-                    <a href="#">Link</a>
+                    <a href="#" class="btn btn-outline-primary">Link</a>
                 </div>
                 <div class="col-md-7 order-md-2">
                     <img src="https://picsum.photos/id/47/800/600" alt="" class="w-100 d-block rounded-4">
@@ -177,7 +180,7 @@
                     <p class="text-secondary">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi dolores ducimus sunt aliquam asperiores ipsa. Facere amet recusandae ipsa?
                     </p>
-                    <a href="#">Link</a>
+                    <a href="#" class="btn btn-outline-primary">Link</a>
                 </div>
                 <div class="col-md-7 order-md-3">
                     <img src="https://picsum.photos/id/49/800/600" alt="" class="w-100 d-block rounded-4">
@@ -187,7 +190,7 @@
                     <p class="text-secondary">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi dolores ducimus sunt aliquam asperiores ipsa. Facere amet recusandae ipsa?
                     </p>
-                    <a href="#">Link</a>
+                    <a href="#" class="btn btn-outline-primary">Link</a>
                 </div>
                 <div class="col-md-7 order-md-last">
                     <img src="https://picsum.photos/id/66/800/600" alt="" class="w-100 d-block rounded-4">
@@ -197,7 +200,7 @@
                     <p class="text-secondary">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. A, nisi dolores ducimus sunt aliquam asperiores ipsa. Facere amet recusandae ipsa?
                     </p>
-                    <a href="#">Link</a>
+                    <a href="#" class="btn btn-outline-primary">Link</a>
                 </div>
             </div>
         </div>
