--- a/BOOTSTRAP/layout.html
+++ b/BOOTSTRAP/layout.html
@@ -205,6 +205,39 @@
             </div>
         </div>
     </section>
+    <section style="padding-block:120px" >
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12">
+                    <h2 class="display-4 text-center py-4">CONTACT</h2>
+                </div>
+                <div class="col-md-6">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.8253898806265!2d121.50937041179448!3d25.03999907771998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a90a8d497325%3A0x2876dc1b4d647f9!2z57i957Wx5bqc!5e0!3m2!1szh-TW!2stw!4v1724312682045!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="col-md-6">
+                    <form action="">
+                        <div class="mb-3">
+                            <label for="" class="form-label">Name</label>
+                            <input type="text" class="form-control focus-ring border-dark" style="--bs-focus-ring-color: rgba(var(--bs-warning-rgb), .6)">
+                        </div>
+                        <div class="mb-3">
+                            <label for="" class="form-label">Phone</label>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="" class="form-label">Email</label>
+                            <input type="text" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="" class="form-label">Email</label>
+                            <textarea name="" id="" rows="10" class="form-control"></textarea>
+                        </div>
+                        <input type="submit" class="btn btn-primary" value="送出">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
