--- a/BOOTSTRAP/layout.html
+++ b/BOOTSTRAP/layout.html
@@ -205,7 +205,7 @@
             </div>
         </div>
     </section>
-    <section style="padding-block:120px" >
+    <section style="padding-block:120px" class="bg-warning-subtle">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12">
@@ -216,23 +216,23 @@
                 </div>
                 <div class="col-md-6">
                     <form action="">
-                        <div class="mb-3">
+                        <div class="form-floating mb-3">
+                            <input type="text" placeholder="Name" class="form-control focus-ring border-warning" style="--bs-focus-ring-color: rgba(var(--bs-warning-rgb), .6)">
                             <label for="" class="form-label">Name</label>
-                            <input type="text" class="form-control focus-ring border-dark" style="--bs-focus-ring-color: rgba(var(--bs-warning-rgb), .6)">
                         </div>
-                        <div class="mb-3">
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control focus-ring border-warning" style="--bs-focus-ring-color: rgba(var(--bs-warning-rgb), .6)" placeholder="Phone">
                             <label for="" class="form-label">Phone</label>
-                            <input type="text" class="form-control">
                         </div>
-                        <div class="mb-3">
+                        <div class="form-floating mb-3">
+                            <input type="text" class="form-control focus-ring border-warning" style="--bs-focus-ring-color: rgba(var(--bs-warning-rgb), .6)" placeholder="Email">
                             <label for="" class="form-label">Email</label>
-                            <input type="text" class="form-control">
                         </div>
-                        <div class="mb-3">
-                            <label for="" class="form-label">Email</label>
-                            <textarea name="" id="" rows="10" class="form-control"></textarea>
+                        <div class="form-floating mb-3">
+                            <textarea  class="form-control focus-ring border-warning" style="--bs-focus-ring-color: rgba(var(--bs-warning-rgb), .6);height:200px" placeholder="Content"></textarea>
+                            <label for="" class="form-label">Content</label>
                         </div>
-                        <input type="submit" class="btn btn-primary" value="送出">
+                        <input type="submit" class="btn btn-warning" value="送出">
                     </form>
                 </div>
             </div>
