--- a/BOOTSTRAP/layout.html
+++ b/BOOTSTRAP/layout.html
@@ -8,10 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        nav {
+            /* background-color: rgb(0 0 0 / .5); */
+            background-color: hwb(from #098 h w calc(b + 50) / .5 );
+            backdrop-filter: blur(8px);
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-body-tertiary" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-sm fixed-top" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -24,13 +31,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#service">Service</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Disabled</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
@@ -93,7 +100,7 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <section style="padding-block:120px;" class="bg-warning-subtle">
+    <section style="padding-block:120px;" class="bg-warning-subtle" id="about">
         <div class="container">
             <div class="row g-4">
                 <div class="col-12">
@@ -156,7 +163,7 @@
             </div>
         </div>
     </section>
-    <section style="padding-block:120px" class="bg-light bg-gradient">
+    <section style="padding-block:120px" class="bg-light bg-gradient" id="service">
         <div class="container">
             <div class="row align-items-center g-4">
                 <div class="col-12">
@@ -205,14 +212,14 @@
             </div>
         </div>
     </section>
-    <section style="padding-block:120px" class="bg-warning-subtle">
+    <section style="padding-block:120px" class="bg-warning-subtle" id="contact">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center gy-4">
                 <div class="col-12">
                     <h2 class="display-4 text-center py-4">CONTACT</h2>
                 </div>
                 <div class="col-md-6">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.8253898806265!2d121.50937041179448!3d25.03999907771998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a90a8d497325%3A0x2876dc1b4d647f9!2z57i957Wx5bqc!5e0!3m2!1szh-TW!2stw!4v1724312682045!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.8253898806265!2d121.50937041179448!3d25.03999907771998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a90a8d497325%3A0x2876dc1b4d647f9!2z57i957Wx5bqc!5e0!3m2!1szh-TW!2stw!4v1724312682045!5m2!1szh-TW!2stw" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-md-6">
                     <form action="">
@@ -238,6 +245,9 @@
             </div>
         </div>
     </section>
+    <footer class="bg-dark text-light py-4 text-center">
+        Copyrights&copy;All Rights Reserved
+    </footer>
 </body>
 
 </html>
