--- a/TAILWIND/layout.html
+++ b/TAILWIND/layout.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400..800&family=Holtwood+One+SC&family=Noto+Serif+TC:wght@200..900&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -35,25 +35,36 @@
     </style>
 </head>
 <body class="font-serif">
-    <nav class="bg-zinc-800/80 text-zinc-100 flex px-4 py-5">
+    <nav class="bg-zinc-800/80 text-zinc-100 flex px-4 py-5 fixed w-full z-50 backdrop-blur">
         <a href="#">Logo</a>
-        <div class="ml-auto space-x-4 hover:*:text-teal-400 *:duration-300">
+        <a href="#" class="ml-auto sm:hidden"><i class="fa-solid fa-bars fa-lg"></i></a>
+        <div class="ml-auto space-x-4 hover:*:text-teal-400 *:duration-300 sm:block hidden">
             <a href="#">About</a>
             <a href="#">Service</a>
             <a href="#">Folio</a>
             <a href="#">Contact</a>
         </div>
     </nav>
-    <header class="py-28 bg-teal-100">
-        <div class="container flex items-center">
-            <div class="w-1/2 p-4">
-                <h1 class="font-display text-6xl mb-6">HELLO<br>TAILWIND</h1>
-                <p class="text-xl mb-7">
+    <nav class="w-full h-screen bg-zinc-800/80 fixed z-50 backdrop-blur text-zinc-100 text-center flex flex-col justify-center space-y-4 hidden">
+        <a href="#" class="text-5xl font-bold">Logo</a>
+        <div class="flex flex-col space-y-4 *:text-3xl">
+            <a href="#">About</a>
+            <a href="#">Service</a>
+            <a href="#">Folio</a>
+            <a href="#">Contact</a>
+        </div>
+        <a href="#" class="absolute top-10 right-10"><i class="fa-solid fa-xmark fa-2xl"></i></a>
+    </nav>
+    <header class="pb-28 sm:pt-36 pt-0 bg-teal-100">
+        <div class="container flex flex-wrap items-center">
+            <div class="lg:w-1/2 sm:w-7/12 w-full p-4 order-2 sm:order-1 sm:text-left text-center">
+                <h1 class="font-display lg:text-6xl sm:text-4xl text-6xl mb-6">HELLO<br>TAILWIND</h1>
+                <p class="lg:text-xl sm:text-base text-xl mb-7">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eum voluptates hic nobis similique laborum ipsum reprehenderit quasi voluptatibus consequuntur!
                 </p>
                 <a href="#" class="btn btn-teal">Read</a>
             </div>
-            <div class="w-1/2">
+            <div class="lg:w-1/2 sm:w-5/12 w-full order-1 sm:order-2">
                 <img src="https://picsum.photos/id/40/800" alt="" class="w-full block">
             </div>
         </div>
