--- a/TAILWIND/layout.html
+++ b/TAILWIND/layout.html
@@ -70,34 +70,34 @@
         </div>
     </header>
     <section class="py-20 bg-teal-50">
-        <div class="container flex flex-wrap">
-            <div class="w-1/3 flex items-center px-4">
+        <div class="container flex flex-wrap space-y-8 lg:space-y-0">
+            <div class="lg:w-1/3 w-full flex items-center lg:px-4 sm:px-24 px-6">
                 <div class="rounded-full overflow-hidden">
                     <img src="https://picsum.photos/200" alt="">
                 </div>
-                <div class="pl-4">
+                <div class="px-4">
                     <h3 class="text-lg font-bold uppercase">title</h3>
                     <p class="leading-4">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic natus doloribus magni.
                     </p>
                 </div>
             </div>
-            <div class="w-1/3 flex items-center px-4">
-                <div class="rounded-full overflow-hidden">
+            <div class="lg:w-1/3 w-full flex items-center lg:px-4 sm:px-24 px-6">
+                <div class="rounded-full overflow-hidden order-2 lg:order-1">
                     <img src="https://picsum.photos/200?random=1" alt="">
                 </div>
-                <div class="pl-4">
+                <div class="px-4 order-1 lg:order-2">
                     <h3 class="text-lg font-bold uppercase">title</h3>
                     <p class="leading-4">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic natus doloribus magni.
                     </p>
                 </div>
             </div>
-            <div class="w-1/3 flex items-center px-4">
+            <div class="lg:w-1/3 w-full flex items-center lg:px-4 sm:px-24 px-6">
                 <div class="rounded-full overflow-hidden">
                     <img src="https://picsum.photos/200?random=2" alt="">
                 </div>
-                <div class="pl-4">
+                <div class="px-4">
                     <h3 class="text-lg font-bold uppercase">title</h3>
                     <p class="leading-4">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic natus doloribus magni.
@@ -106,9 +106,9 @@
             </div>
         </div>
     </section>
-    <section class="py-20 bg-teal-100">
+    <section class="py-32 bg-teal-100">
         <div class="container flex flex-wrap">
-            <div class="w-1/4 p-4">
+            <div class="lg:w-1/4 md:w-1/3 w-1/2 p-4">
                 <div class="rounded-lg overflow-hidden bg-teal-50 border border-teal-600 hover:shadow-xl duration-300">
                     <div class="aspect-[4/3]">
                         <img src="https://picsum.photos/id/34/800/600" alt="" class="cover">
@@ -122,7 +122,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w-1/4 p-4">
+            <div class="lg:w-1/4 md:w-1/3 w-1/2 p-4">
                 <div class="rounded-lg overflow-hidden bg-teal-50 border border-teal-600 hover:shadow-xl duration-300">
                     <div class="aspect-[4/3]">
                         <img src="https://picsum.photos/id/34/800/600" alt="" class="cover">
@@ -136,7 +136,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w-1/4 p-4">
+            <div class="lg:w-1/4 md:w-1/3 w-1/2 p-4">
                 <div class="rounded-lg overflow-hidden bg-teal-50 border border-teal-600 hover:shadow-xl duration-300">
                     <div class="aspect-[4/3]">
                         <img src="https://picsum.photos/id/34/800/600" alt="" class="cover">
@@ -150,7 +150,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w-1/4 p-4">
+            <div class="lg:w-1/4 md:w-1/3 w-1/2 p-4">
                 <div class="rounded-lg overflow-hidden bg-teal-50 border border-teal-600 hover:shadow-xl duration-300">
                     <div class="aspect-[4/3]">
                         <img src="https://picsum.photos/id/34/800/600" alt="" class="cover">
@@ -164,7 +164,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w-1/4 p-4">
+            <div class="lg:w-1/4 md:w-1/3 w-1/2 p-4">
                 <div class="rounded-lg overflow-hidden bg-teal-50 border border-teal-600 hover:shadow-xl duration-300">
                     <div class="aspect-[4/3]">
                         <img src="https://picsum.photos/id/34/800/600" alt="" class="cover">
@@ -178,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w-1/4 p-4">
+            <div class="lg:w-1/4 md:w-1/3 w-1/2 p-4">
                 <div class="rounded-lg overflow-hidden bg-teal-50 border border-teal-600 hover:shadow-xl duration-300">
                     <div class="aspect-[4/3]">
                         <img src="https://picsum.photos/id/34/800/600" alt="" class="cover">
@@ -192,7 +192,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w-1/4 p-4">
+            <div class="lg:w-1/4 md:w-1/3 w-1/2 p-4">
                 <div class="rounded-lg overflow-hidden bg-teal-50 border border-teal-600 hover:shadow-xl duration-300">
                     <div class="aspect-[4/3]">
                         <img src="https://picsum.photos/id/34/800/600" alt="" class="cover">
@@ -206,7 +206,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w-1/4 p-4">
+            <div class="lg:w-1/4 md:w-1/3 w-1/2 p-4">
                 <div class="rounded-lg overflow-hidden bg-teal-50 border border-teal-600 hover:shadow-xl duration-300">
                     <div class="aspect-[4/3]">
                         <img src="https://picsum.photos/id/34/800/600" alt="" class="cover">
