--- a/TAILWIND/layout.html
+++ b/TAILWIND/layout.html
@@ -224,12 +224,12 @@
     </section>
     <section class="py-20 bg-teal-50">
         <div class="container flex flex-wrap items-center">
-            <div class="w-7/12 p-4">
+            <div class="lg:w-7/12 sm:w-1/2 w-full p-4">
                 <div class="rounded-lg overflow-hidden">
                     <img src="https://picsum.photos/id/22/800" alt="" class="cover">
                 </div>
             </div>
-            <div class="w-5/12 p-4 space-y-4">
+            <div class="lg:w-5/12 sm:w-1/2 w-full p-4 space-y-4">
                 <h3 class="text-3xl font-bold">title</h3>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum maiores autem temporibus minus adipisci!
@@ -237,12 +237,12 @@
                 </p>
                 <a href="#" class="btn btn-teal">Read</a>
             </div>
-            <div class="w-7/12 p-4 order-2">
+            <div class="lg:w-7/12 sm:w-1/2 w-full p-4 sm:order-2">
                 <div class="rounded-lg overflow-hidden">
                     <img src="https://picsum.photos/id/52/800" alt="" class="cover">
                 </div>
             </div>
-            <div class="w-5/12 p-4 space-y-4 order-1">
+            <div class="lg:w-5/12 sm:w-1/2 w-full p-4 space-y-4 sm:order-1">
                 <h3 class="text-3xl font-bold">title</h3>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum maiores autem temporibus minus adipisci!
@@ -250,12 +250,12 @@
                 </p>
                 <a href="#" class="btn btn-teal">Read</a>
             </div>
-            <div class="w-7/12 p-4 order-3">
+            <div class="lg:w-7/12 sm:w-1/2 w-full p-4 sm:order-3">
                 <div class="rounded-lg overflow-hidden">
                     <img src="https://picsum.photos/id/43/800" alt="" class="cover">
                 </div>
             </div>
-            <div class="w-5/12 p-4 space-y-4 order-4">
+            <div class="lg:w-5/12 sm:w-1/2 w-full p-4 space-y-4 sm:order-4">
                 <h3 class="text-3xl font-bold">title</h3>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum maiores autem temporibus minus adipisci!
@@ -263,12 +263,12 @@
                 </p>
                 <a href="#" class="btn btn-teal">Read</a>
             </div>
-            <div class="w-7/12 p-4 order-6">
+            <div class="lg:w-7/12 sm:w-1/2 w-full p-4 sm:order-6">
                 <div class="rounded-lg overflow-hidden">
                     <img src="https://picsum.photos/id/21/800" alt="" class="cover">
                 </div>
             </div>
-            <div class="w-5/12 p-4 space-y-4 order-5">
+            <div class="lg:w-5/12 sm:w-1/2 w-full p-4 space-y-4 sm:order-5">
                 <h3 class="text-3xl font-bold">title</h3>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque ipsum maiores autem temporibus minus adipisci!
