--- a/TAILWIND/layout.html
+++ b/TAILWIND/layout.html
@@ -58,7 +58,9 @@
     <header class="pb-28 sm:pt-36 pt-0 bg-teal-100">
         <div class="container flex flex-wrap items-center">
             <div class="lg:w-1/2 sm:w-7/12 w-full p-4 order-2 sm:order-1 sm:text-left text-center">
-                <h1 class="font-display lg:text-6xl sm:text-4xl text-6xl mb-6">HELLO<br>TAILWIND</h1>
+                <h1 class="relative font-display lg:text-6xl sm:text-4xl text-6xl mb-6
+                before:content-['*'] before:block before:text-red-500 after:content-['*'] after:text-red-500 after:block
+                ">HELLO<br>MY BLOG</h1>
                 <p class="lg:text-xl sm:text-base text-xl mb-7">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius eum voluptates hic nobis similique laborum ipsum reprehenderit quasi voluptatibus consequuntur!
                 </p>
