--- a/TAILWIND/layout.html
+++ b/TAILWIND/layout.html
@@ -32,6 +32,9 @@
         .cover {
             @apply w-full h-full block object-cover
         }
+        .overlay {
+            @apply before:content-[''] before:absolute before:w-full before:h-full before:top-1 before:left-1 before:bg-amber-400 before:rounded-lg hover:before:top-3 hover:before:left-3 before:duration-300
+        }
     </style>
 </head>
 <body class="font-serif">
@@ -227,8 +230,8 @@
     <section class="py-20 bg-teal-50">
         <div class="container flex flex-wrap items-center">
             <div class="lg:w-7/12 sm:w-1/2 w-full p-4">
-                <div class="rounded-lg overflow-hidden">
-                    <img src="https://picsum.photos/id/22/800" alt="" class="cover">
+                <div class="relative overlay">
+                    <img src="https://picsum.photos/id/22/800" alt="" class="cover rounded-lg relative">
                 </div>
             </div>
             <div class="lg:w-5/12 sm:w-1/2 w-full p-4 space-y-4">
@@ -253,8 +256,8 @@
                 <a href="#" class="btn btn-teal">Read</a>
             </div>
             <div class="lg:w-7/12 sm:w-1/2 w-full p-4 sm:order-3">
-                <div class="rounded-lg overflow-hidden">
-                    <img src="https://picsum.photos/id/43/800" alt="" class="cover">
+                <div class="relative overlay">
+                    <img src="https://picsum.photos/id/43/800" alt="" class="cover rounded-lg relative">
                 </div>
             </div>
             <div class="lg:w-5/12 sm:w-1/2 w-full p-4 space-y-4 sm:order-4">
