--- a/TAILWIND/layout.html
+++ b/TAILWIND/layout.html
@@ -286,7 +286,7 @@
     </section>
     <footer class="pt-20 bg-teal-100">
         <div class="container flex flex-wrap">
-            <div class="w-1/4">
+            <div class="md:w-1/4 w-1/2 p-4" >
                 <h3 class="mb-3 text-xl font-bold text-teal-800">Getting Started</h3>
                 <ul class="text-zinc-700">
                     <li><a href="#">List</a></li>
@@ -297,7 +297,7 @@
                     <li><a href="#">List</a></li>
                 </ul>
             </div>
-            <div class="w-1/4">
+            <div class="md:w-1/4 w-1/2 p-4" >
                 <h3 class="mb-3 text-xl font-bold text-teal-800">Core Concepts</h3>
                 <ul class="text-zinc-700">
                     <li><a href="#">List</a></li>
@@ -308,7 +308,7 @@
                     <li><a href="#">List</a></li>
                 </ul>
             </div>
-            <div class="w-1/4">
+            <div class="md:w-1/4 w-1/2 p-4" >
                 <h3 class="mb-3 text-xl font-bold text-teal-800">Customization </h3>
                 <ul class="text-zinc-700">
                     <li><a href="#">List</a></li>
@@ -316,7 +316,7 @@
                     <li><a href="#">List</a></li>
                 </ul>
             </div>
-            <div class="w-1/4">
+            <div class="md:w-1/4 w-1/2 p-4" >
                 <h3 class="mb-3 text-xl font-bold text-teal-800">Community</h3>
                 <ul class="text-zinc-700">
                     <li><a href="#">List</a></li>
